--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="container">
         <div class="qoute-display" id="qouteDisplay">quote</div>
-        <textarea name="input" class="Input" autofocus>quote</textarea>
+        <textarea name="input" class="Input" autofocus></textarea>
     </div>
 </body>
 <script src="index.js"></script>
